--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "mongoose": "^7.5.0",
-    "stripe": "^13.5.0",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.30",
-    "autoprefixer": "^10.4.15",
-    "nodemailer": "^6.9.5",
-    "axios": "^1.5.0",
-    "react-hook-form": "^7.46.1",
-    "zod": "^3.22.2",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.1",
-    "date-fns": "^2.30.0",
-    "typescript": "^5.2.2",
+    "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/node": "^20.6.0"
+    "autoprefixer": "^10.4.15",
+    "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.477.0",
+    "mongoose": "^7.5.0",
+    "next": "^14.0.0",
+    "nodemailer": "^6.9.5",
+    "postcss": "^8.4.30",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
+    "stripe": "^13.5.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
