--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.1",
     "@types/node": "^20.6.0",
@@ -17,6 +18,7 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "emailjs": "^4.0.3",
     "lucide-react": "^0.477.0",
     "mongoose": "^7.5.0",
     "next": "^14.0.0",
