--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.5",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "stripe": "^13.5.0",
