--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "stripe": "^13.5.0",
+    "swiper": "^11.2.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "zod": "^3.22.2"
