--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "emailjs": "^4.0.3",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.477.0",
     "mongoose": "^7.5.0",
     "next": "^14.0.0",
