--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
@@ -23,9 +24,11 @@
     "lucide-react": "^0.477.0",
     "mongoose": "^7.5.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.9.5",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
     "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
