--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_stmm5uo
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=ePiu9Si9aKL4pFXL5
 
 NEXT_PUBLIC_SHAPO_API_KEY=77b9e898-045d-4d50-88b5-a8c5b30f1292
+
+MONGODB_URI=mongodb+srv://danielsalazar1109:fjwAOP32nEOBPmQN@vancastro.lpsfs.mongodb.net/?retryWrites=true&w=majority&appName=VanCastro
