--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^12.5.0",
