--- a/.env
+++ b/.env
@@ -7,5 +7,10 @@ NEXT_PUBLIC_SHAPO_API_KEY=77b9e898-045d-4d50-88b5-a8c5b30f1292
 MONGODB_URI=mongodb+srv://danielsalazar1109:fjwAOP32nEOBPmQN@vancastro.lpsfs.mongodb.net/?retryWrites=true&w=majority&appName=VanCastro
 
 # NextAuth Configuration
-NEXTAUTH_SECRET=your-super-secret-key-for-jwt-encryption
+NEXTAUTH_SECRET=vancastrosecretkey
 NEXTAUTH_URL=http://localhost:3000
+
+# Google OAuth Configuration
+# Replace these with your actual Google OAuth credentials from Google Cloud Console
+GOOGLE_CLIENT_ID=896993827498-8es74jcnhqnbkdmfa0fsmvis3ble4tco.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
