--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.19",
     "prettier": "^3.0.3",
