--- a/.env
+++ b/.env
@@ -11,6 +11,11 @@ NEXTAUTH_SECRET=vancastrosecretkey
 NEXTAUTH_URL=http://localhost:3000
 
 # Google OAuth Configuration
-# Replace these with your actual Google OAuth credentials from Google Cloud Console
 GOOGLE_CLIENT_ID=896993827498-8es74jcnhqnbkdmfa0fsmvis3ble4tco.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=vancastroadmi@gmail.com
+EMAIL_PASS=qiot fyeg rajk zdio
