--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.6.0",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18.2.21",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.7",
@@ -33,6 +34,7 @@
     "mongoose": "^7.5.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.11",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.5",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
