--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.2.21",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.7",
+    "@types/react-signature-canvas": "^1.0.7",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.46.1",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "stripe": "^13.5.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^3.3.3",
