--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^4.24.11",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.5",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
