--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=your_email@example.com
 EMAIL_PASS=your_email_password
+
+# Vercel Cron Configuration
+CRON_SECRET=your_cron_secret_key_for_authentication
