--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.5",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.1.91",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-pdf": "^9.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
