--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^12.5.0",
@@ -38,14 +39,14 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.5",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^5.1.91",
+    "pdfjs-dist": "^3.0.279",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "^7.1.2",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.17",
+    "@types/react-pdf": "^7.0.0",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.19",
     "prettier": "^3.0.3",
